# SWE-bench-collect

./: .gitignore  README.md  pyproject.toml
.trunk/: trunk.yaml
collect/: constants.py  create_task_instances.py  get_valid_tasks.py  main.py  make_repo.sh  retrieve_pull_requests.py  utils.py
llm_verified/: README.md  prompts.py  verify.py
llm_verified/example/: output_task_instance_good.jsonl  task_instance_good.json
